@@ -4,6 +4,7 @@ New features:
 ..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)
 
 Bug fixes:
+..F....... [ZBX-6669] fixed use of current host as filter when selecting items for graph forms and trigger forms (gcalenko)
 ..F....... [ZBX-12722] fixed scrollbar causing a JS error in "500 latest values" page due to unnecessarily initialization (Ivo)
 ..F....... [ZBX-12860] fixed problem counting in host groups in navigation tree widget (miks)
 ..F....... [ZBX-12710] fixed OS type detection logic (vjaceslavs)
